--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nunjucks": "^3.0.1",
     "nunjucks-html-loader": "^1.1.0",
     "sass-loader": "^6.0.6",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^0.18.2",
     "vinyl-ftp": "^0.6.0",
     "webpack": "^3.6.0",
