add smooth scroll, fixed parallax, fixed webpack load css, fixed init animation

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-env": "^1.6.0",
     "bootstrap-sass": "^3.3.7",
     "clean-webpack-plugin": "^0.1.16",
+    "css-hot-loader": "^1.3.6",
     "css-loader": "^0.28.7",
     "extract-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -24,13 +25,16 @@
     "is-in-viewport": "^3.0.0",
     "jquery": "^3.2.0",
     "jquery-parallax.js": "^1.5.0",
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
     "node-bourbon": "^4.2.8",
     "node-reset-scss": "^1.0.1",
     "node-sass": "^4.5.3",
     "nunjucks": "^3.0.1",
     "nunjucks-html-loader": "^1.1.0",
+    "rellax": "^1.4.0",
     "sass-loader": "^6.0.6",
     "slick-carousel": "^1.8.1",
+    "smoothscroll-for-websites": "^1.4.6",
     "style-loader": "^0.18.2",
     "vinyl-ftp": "^0.6.0",
     "webpack": "^3.6.0",
