--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "dependencies": {
     "aos": "^2.2.0",
+    "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.23.0",
@@ -31,6 +32,7 @@
     "node-sass": "^4.5.3",
     "nunjucks": "^3.0.1",
     "nunjucks-html-loader": "^1.1.0",
+    "postcss-loader": "^2.0.10",
     "rellax": "^1.4.0",
     "sass-loader": "^6.0.6",
     "slick-carousel": "^1.8.1",
